# ftn_tst

./: LICENSE  README.md  TODO.md  pyproject.toml
fur_store/: manage.py
fur_store/fur_store/: asgi.py  settings.py  urls.py  wsgi.py
fur_store/shop/: models.py  serializers.py  tests.py  urls.py  views.py
fur_store/shop/migrations/: 0001_initial.py
